逻辑 SQL 生成后，根据逻辑 SQL 抽取字段参与到topology/sqlbuilder 的处理。 这样会更精准